--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
 .App {
+  background-color: rgb(49, 49, 140);
+  color: rgb(253, 221, 221);
+  padding: 20px 50px;
+  margin: 0 auto;
   text-align: center;
+  width: 350px;
+  height: 600px;
+  border: solid 5px rgb(31, 31, 87);
+  border-radius: 5px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  font-size: 2rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.counter {
+  font-size: 4rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+  font-size: 30px;
+  background-color: rgb(1, 164, 164);
+  margin: 30px 10px;
+  padding: 20px;
+  border: 5px solid rgb(31, 31, 87);
+  border-radius: 5px;
 }
